--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4-2'
+    ext {
+        kotlin_version = '1.1.51'
+        retrofit_version = '2.3.0'
+        support_library_version = '26.1.0'
+    }
     repositories {
         jcenter()
     }
