--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     compile "com.squareup.okhttp3:okhttp:$okhttp_version"
     compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-
+    compile 'com.otaliastudios:cameraview:1.2.3'
+    compile 'com.wonderkiln:camerakit:0.11.0'
 }
 repositories {
     mavenCentral()
