--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,10 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:$okhttp_version"
     compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     compile 'com.otaliastudios:cameraview:1.2.3'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
 repositories {
     mavenCentral()
+    maven { url 'https://maven.google.com' }
 }
