--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+.project
+.settings/org.eclipse.buildship.core.prefs
+.vscode/settings.json
+app/.classpath
+app/.project
+app/.settings/org.eclipse.buildship.core.prefs
