--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     }
     buildTypes {
         debug {
-            applicationIdSuffix = ".debug"
+//            applicationIdSuffix = ".debug"
         }
         release {
             minifyEnabled false
@@ -46,7 +46,7 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     compile "com.squareup.okhttp3:okhttp:$okhttp_version"
     compile "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-    compile 'com.otaliastudios:cameraview:1.2.3'
+//    compile 'com.otaliastudios:cameraview:1.2.3'
     compile 'com.github.bumptech.glide:glide:4.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
